--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="container text-center my-5">
-        <a class="btn btn-success btn-lg" href="/pages/CreateNewTGPostOnSH.html" role="button">CREATE NEW TG POST ON SHOWSHEIST</a>
+        <a class="btn btn-success btn-lg" href="https://iamrdb.github.io/SinglePageActions/pages/CreateNewTGPostOnSH.html" role="button">CREATE NEW TG POST ON SHOWSHEIST</a>
     </div>
 
 
