--- a/pages/CreateNewTGPostOnSH.html
+++ b/pages/CreateNewTGPostOnSH.html
@@ -114,7 +114,7 @@
                 if ($("#typeofvideo").val() == "Webseries") {
                     videoDetails += " (Season " + String($("#nos").val()) + ")";
                 }
-                videoDetails += "\n📙 Language : " + $("#lang").val() + "\n" + "💿 Quality : FULL HD \n" + "📤 Uploader : @ShowsHeist\n\n\n";
+                videoDetails += "\n📅 Year : " + $("#yor").val() + "\n📙 Language : " + $("#lang").val() + "\n" + "💿 Quality : FULL HD \n" + "📤 Uploader : @ShowsHeist\n\n\n";
                 var fileNamePrefix = getVideoCode();
                 mainText += fileNamePrefix + "\n\n" + videoDetails;
 
